--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,8 +3,9 @@
 }
 
 .body {
-  color: white;
-  background-color: #282a36;
+  composes: fontStyle from '../../styles/global.css';
+  color: #201454;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
