--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .header {
+  composes: fontStyle from '../../styles/global.css';
   font-size: 5rem;
-  color: #6272a4;
-  background-color: #282a36;
+  color: white;
+  background-color: #201454;
+  padding: 10px;
 }
